--- a/src/content/blog/1. simple-validation-with-javascript.md
+++ b/src/content/blog/1. simple-validation-with-javascript.md
@@ -146,6 +146,7 @@ const componentsForm = () => {
   const execute = () => {
     const el = {
       main: ".js-form",
+      btnOpenFile: ".js-button-open-file",
     };
     if ($(el.main).length === 0) return;
 
@@ -158,6 +159,10 @@ const componentsForm = () => {
       input.each(function () {
         const type = $(this).attr("type");
         const c_type = $(this).data("type");
+        const isRequired = $(this).prop("required");
+        const isDisabled = $(this).prop("disabled");
+
+        if (isDisabled) return;
 
         const value = $(this).val();
         const id = $(this).attr("id");
@@ -184,7 +189,11 @@ const componentsForm = () => {
             handleCondition(!emailRules.test(value));
             break;
           case "tel":
-            handleCondition(!phoneNumberRules.test(value));
+            handleCondition(!phoneNumberRules.test(value) && value !== "");
+            break;
+          case "file":
+            if (isRequired)
+              handleCondition(!this.files || this.files.length === 0);
             break;
 
           default:
@@ -230,7 +239,7 @@ const componentsForm = () => {
             handleCondition(!emailRules.test(value));
             break;
           case "tel":
-            handleCondition(!phoneNumberRules.test(value));
+            handleCondition(!phoneNumberRules.test(value) && value !== "");
             break;
 
           default:
